# e-zimod-server

./: .gitignore  LICENSE  Main.hs  Model.hs  README.md  Settings.hs  Simulation.hs  e-zimod-server.cabal  stuff.txt  test.db
Data/: Profiles.hs
Model/: DBManager.hs  Machine.hs  Profile.hs  Sample.hs  State.hs  Types.hs  UserProfile.hs  Utils.hs
Simulation/: MonteCarlo.hs  Parameter.hs
Test/: Json.hs  Model.hs  Utils.hs
Utils/: DBClass.hs  DBManager.hs
